增加視差滾動

--- a/profile.html
+++ b/profile.html
@@ -22,11 +22,11 @@
 ​
     <div>
       <div class="title-bottom-line">
-        <h2>個人資料</h2>
+        <h2 data-aos="fade-left">個人資料</h2>
         <span class="title-en">PROFILE</span>
       </div>
       <div class="mb-72">
-        <ul>
+        <ul data-aos="fade-left">
           <li class="personal">
             <div class="edu">
               陳久安 Joanne Chen<br />
@@ -46,7 +46,7 @@
         <span class="title-en">EDUCATION</span>
       </div>
       <div class="mb-72 item-wrap">
-        <ul class="school">
+        <ul class="school" data-aos="fade-up">
           <li class="school-item time-line">國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</li>
           <li class="school-item">國立六腳高級中學 美術班 | 2013－2016</li>
         </ul>
@@ -83,7 +83,7 @@
       <span class="title-en">WORK EXPERIENCE</span>
     </div>
     <div class="container-work-experience">
-      <ul>
+      <ul data-aos="fade-up-right">
         <li>
           <div class="container-design">六角學院 視覺設計實習生 | 2019/07－2020/06</div>
             <img class="college" src="images/Group 1.svg" alt="六角學院">
@@ -134,6 +134,13 @@
       </div>
     </div>
   </div>
+
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="https://unpkg.com/aos@next/dist/aos.js">
+  </script>
+  <script>
+  AOS.init();
+  </script>
 ​
 ​
 </body>
